--- a/GestorComercialAPI/package.json
+++ b/GestorComercialAPI/package.json
@@ -13,12 +13,14 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "morgan": "^1.10.0"
-    
+    "morgan": "^1.10.0",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.14.0",
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
